--- a/pom.xml
+++ b/pom.xml
@@ -265,18 +265,13 @@
 
   <profiles>
     <profile>
-      <id>code-analysis</id>
+      <id>code-coverage</id>
       <build>
         <plugins>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.2.5</version>
-          </plugin>
-          <plugin>
-            <groupId>org.sonarsource.scanner.maven</groupId>
-            <artifactId>sonar-maven-plugin</artifactId>
-            <version>3.11.0.3922</version>
           </plugin>
           <plugin>
             <groupId>org.jacoco</groupId>
@@ -301,6 +296,18 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>code-analysis</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>3.11.0.3922</version>
           </plugin>
         </plugins>
       </build>
