--- a/.github/workflows/tag_release.yml
+++ b/.github/workflows/tag_release.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Check user permissions
         uses: 74th/workflow-permission-action@1.0.0
         with:
-          users: dedece35,glalloue,jhertout,jules-delecour-dav,olegoaer,zippy1978,utarwyn
+          users: dedece35,glalloue,jhertout,jules-delecour-dav,olegoaer,zippy1978,utarwyn,jay-79
   build:
     name: Build And Release
     runs-on: ubuntu-latest
@@ -27,7 +27,7 @@ jobs:
           ref: ${{  github.ref_name }}
       - name: Extract release notes
         id: extract-release-notes
-        uses: ffurrer2/extract-release-notes@v1
+        uses: ffurrer2/extract-release-notes@v2
       - name: Build project
         run: mvn -e -B clean package -DskipTests
       - name: Create release
@@ -43,10 +43,11 @@ jobs:
           body: ${{ steps.extract-release-notes.outputs.release_notes }}
       - name: Export plugin Jar files
         id: export_jar_files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ecocode-plugins
           path: target
+          overwrite: true
       - name: Export UPLOAD_URL
         id: export_upload_url
         run: echo "upload_url=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_OUTPUT
@@ -58,7 +59,7 @@ jobs:
     steps:
       - name: Import plugin JAR files
         id: import_jar_files
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: ecocode-plugins
           path: target
