--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.ecocode</groupId>
   <artifactId>ecocode-csharp-plugin</artifactId>
-  <version>1.5.1</version>
+  <version>1.5.2-SNAPSHOT</version>
 
   <packaging>sonar-plugin</packaging>
 
@@ -30,7 +30,7 @@
     <connection>scm:git:https://github.com/green-code-initiative/ecoCode-csharp-sonarqube</connection>
     <developerConnection>scm:git:https://github.com/green-code-initiative/ecoCode-csharp-sonarqube</developerConnection>
     <url>https://github.com/green-code-initiative/ecoCode-csharp-sonarqube</url>
-    <tag>1.5.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
